# VeryFastVGG

./: .gitignore  CMakeLists.txt  Makefile  README.md  log.txt  main.c
data/: image.py  weights.py
src/: main.c  matrix.h
test/: diff.py  search.py  test.py
